# haircut

./: .env.exemplo  .gitignore  .pdm-python  README.md  db.sqlite3  pyproject.toml  requirements.txt
app/: asgi.py  celery.py  pagination.py  settings.py  urls.py
core/: authentication.py  tasks.py  test.py
core/migrations/: 0005_useraiquestion_userimageaiquestion.py  0006_askai.py  0007_useraiquestion_response.py  0008_alter_userimageaiquestion_user_ai_question_uuid.py  0009_alter_useraiquestion_response.py  0010_feed_save_views_like.py  0011_imagegeneration.py  0012_alter_imagegeneration_feedback.py  0013_room_useraiquestion_room.py  0014_alter_room_name.py
core/models/: __init__.py  ai.py  feed.py  image_generation.py  room.py  user.py
core/serializers/: __init__.py  ai.py  feed.py  image_generation.py  user.py
core/services/: __init__.py  analize_image.py  chat_ai.py  document_processor.py  fal.py  gemini_service.py  management_commands.py  memory.py  rag_service.py  vector_store.py
core/socket/: __init__.py  room.py  routing.py
core/utils/: gemini_rag.py
core/views/: __init__.py  ai.py  feed.py  image_generation.py  user.py  views.py
uploader/: tests.py
uploader/migrations/: 0002_alter_image_file.py  0003_alter_image_file.py
uploader/models/: image.py
uploader/serializers/: image.py
