[project]
name = "haircut"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kauabarros-25", email = "martinsbarroskaua@gmail.com"},
]
dependencies = [
    "asgiref==3.8.1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "cffi==1.17.1; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "cloudinary==1.44.1",
    "colorama==0.4.6; sys_platform == 'win32' or platform_system == 'Windows'",
    "cryptography==44.0.2",
    "dj-database-url==2.3.0",
    "django==5.1.7",
    "django-cloudinary-storage==0.3.0",
    "django-cors-headers==4.9.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.29.0",
    "gunicorn==25.3.0",
    "h11==0.14.0",
    "idna==3.10",
    "inflection==0.5.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "netifaces==0.11.0",
    "packaging==24.1",
    "Pillow==12.1.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydotplus==2.0.2",
    "pyjwt==2.9.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.0",
    "python-magic==0.4.27; sys_platform == 'linux'",
    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.20.1",
    "six==1.16.0",
    "sqlparse==0.5.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2; sys_platform == 'win32'",
    "uritemplate==4.1.1",
    "urllib3==2.0.7",
    "whitenoise[brotli]==6.12.0",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "django-celery-results>=2.6.0",
    "flower>=2.0.1",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "uvicorn>=0.46.0",
    "daphne>=4.2.1",
    "fal>=0.12.1",
    "fal-client>=0.13.2",
    "chromadb>=1.4.1",
    "pypdf>=6.6.2",
    "google-generativeai>=0.8.6",
    "tiktoken>=0.12.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pylint>=3.0.2",
    "ipython>=8.26.0",
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm.scripts]
pre_dev = "python3 ./scripts/set_my_ip.py"
dev = "python3 manage.py runserver 0.0.0.0:19003"
createsuperuser = "python3 manage.py createsuperuser"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"
post_migrate = "python3 manage.py graph_models -S -g -o core.png core"
shell = "python3 manage.py shell"
shellp = "python3 manage.py shell_plus"
test = "python3 core/test.py"
loaddata = "python3 manage.py loaddata core.json"
dumpdata = "python3 manage.py dumpdata --indent 2"
cria_api = "python3 ./scripts/cria_api.py {args}"
check = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
auth_test = "python3 manage.py test core.test.MeEndpointTest.test_me_authenticated"
docker = "docker run -d --name redis -p 6379:6379 redis"
server = "uvicorn core.asgi:application --reload"
celery = "celery -A core worker -l info"
flower = "celery -A core flower --port=5555"
uvicorn = "python3 -m uvicorn app.asgi:application --host 0.0.0.0 --port 8080 --reload"
daphne = "daphne -b 127.0.0.1 -p 19003 app.asgi:application"
start = { composite = ["dev", "daphne"] }

[tool.ruff]
line-length = 120
extend-exclude = ['migrations', '__init__.py', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR6301"]

[tool.ruff.format]
preview = true
quote-style = 'single'