[project]
name = "haircut"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kauabarros-25", email = "martinsbarroskaua@gmail.com"},
    {name = "kauabarros-24", email = "martinsbarroskaua@gmail.com"},
]

dependencies = [
    # Core do Django e database
    "asgiref==3.11.1",
    "django==6.0.2",
    "psycopg2-binary==2.9.10",
    "dj-database-url==2.3.0",
    "whitenoise[brotli]==6.12.0",
    "djangorestframework==3.17.0",
    "django-filter==25.2",
    "django-cors-headers==4.9.0",
    "cloudinary==1.44.1",
    "django-cloudinary-storage==0.3.0",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.1",
    "Pillow==12.1.1",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "django-celery-results>=2.6.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "uvicorn>=0.46.0",
    "langchain>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "google-generativeai>=0.8.6",
    "tiktoken>=0.12.0",
    "pypdf>=6.6.2",
    "aiohttp==3.13.4",
    "yarl==1.23.0",
    "multidict==6.7.1",
    "frozenlist==1.8.0",
    "aiosignal==1.4.0",
    "propcache==0.4.1",
    "cryptography==46.0.6",
    "cffi==2.0.0",
    "pycparser==3.0; python_full_version >= '3.9' and platform_python_implementation != 'PyPy' and implementation_name != 'PyPy'",
    "tzdata==2025.3",
    "packaging==26.0",
    "idna==3.11",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "sqlparse==0.5.5",
    "six==1.17.0",
    "typing-extensions==4.15.0",

    "python-magic-bin==0.4.14; sys_platform == 'win32'",
    "colorama==0.4.6",
    "pywin32==311; platform_system == 'Windows'",
    "django-extensions>=4.1",
    "drf-spectacular>=0.29.0",
    "python-magic>=0.4.27",
    "djangorestframework-simplejwt>=5.5.1",
]

requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pylint>=3.0.2",
    "ipython>=8.26.0",
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
]

[tool.pdm]
distribution = false

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm.scripts]
pre_dev = "python3 ./scripts/set_my_ip.py"
dev = "python3 manage.py runserver 0.0.0.0:19003"
createsuperuser = "python3 manage.py createsuperuser"
makemigrations = "python3 manage.py makemigrations"
migrate = "python3 manage.py migrate"
post_migrate = "python3 manage.py graph_models -S -g -o core.png core"
shell = "python3 manage.py shell"
shellp = "python3 manage.py shell_plus"
test = "python3 core/test.py"
loaddata = "python3 manage.py loaddata core.json"
dumpdata = "python3 manage.py dumpdata --indent 2"
cria_api = "python3 ./scripts/cria_api.py {args}"
check = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
auth_test = "python3 manage.py test core.test.MeEndpointTest.test_me_authenticated"
docker = "docker run -d --name redis -p 6379:6379 redis"
server = "uvicorn core.asgi:application --reload"
celery = "celery -A core worker -l info"
flower = "celery -A core flower --port=5555"
uvicorn = "python3 -m uvicorn app.asgi:application --host 0.0.0.0 --port 8080 --reload"
daphne = "daphne -b 127.0.0.1 -p 19003 app.asgi:application"
start = { composite = ["dev", "daphne"] }

[tool.ruff]
line-length = 120
extend-exclude = ['migrations', '__init__.py', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR6301"]

[tool.ruff.format]
preview = true
quote-style = 'single'